--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
 
-#Database Configuration 
+# Don't change the port
+server.port=9001
+
+# For HTTPS / reverse proxy
+server.forward-headers-strategy=framework
+
 spring.datasource.url=jdbc:mysql://localhost:3306/Shift_Scheduler_db?createDatabaseIfNotExist=true
-spring.datasource.username = root
+spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Hibernate Configuration 
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
