--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,22 @@ spring.application.name=demo
 # Don't change the port
 server.port=9001
 
-# For HTTPS / reverse proxy
-server.forward-headers-strategy=framework
-
-spring.datasource.url=jdbc:mysql://localhost:3306/Shift_Scheduler_db?createDatabaseIfNotExist=true
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/complaint_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.demo=DEBUG
+
+# Swagger/OpenAPI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
