--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,19 @@ spring.application.name=demo
 
 # Don't change the port
 server.port=9001
-
-# For HTTPS / reverse proxy
-server.forward-headers-strategy=framework
-
-spring.datasource.url=jdbc:mysql://localhost:3306/Shift_Scheduler_db?createDatabaseIfNotExist=true
+# ===============================
+# DATABASE CONFIG
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
 spring.datasource.password=Amypo
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===============================
+# JPA CONFIG
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=tru
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
