--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9001
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Amypo
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
