--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=demo
 
-# Don't change the port
-server.port=9001
-# ===============================
-# DATABASE CONFIG
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/complaint_db
 spring.datasource.username=root
-spring.datasource.password=Amypo
-
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA CONFIG
-# ===============================
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# JWT Configuration
+jwt.secret=mySecretKey
+jwt.expiration=86400000
+
+# Swagger Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
