--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,16 @@
 spring.application.name=demo
 
-# H2 Database Configuration (In-Memory)
+# H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=Amypo
+spring.h2.console.enabled=true
 
-# JPA/Hibernate Configuration
+# JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-# H2 Console (for testing)
-spring.h2.console.enabled=true
-
-# JWT Configuration
-jwt.secret=mySecretKey
-jwt.expiration=86400000
-
-# Swagger Configuration
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
-server.port = 9001
+# Server Configuration
+server.port=9001
