--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Server Configuration
-server.port=8080
+server.port=9001
 server.servlet.context-path=/
 
 # Database Configuration (H2 for development/testing)
 spring.datasource.url=jdbc:h2:mem:complaintdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=Amypo
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -25,4 +25,4 @@ logging.level.com.example.demo=DEBUG
 # Swagger/OpenAPI
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-server.port=9001
+
