--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 
     <dependencies>
 
+	<!-- Swagger / OpenAPI for Spring Boot 3 -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.5.0</version>
+</dependency>
+
+
         <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
