--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,52 @@
 # Server Configuration
 server.port=9001
-server.servlet.context-path=/
+# ===============================
+# SERVER
+# ===============================
 
-# Database Configuration (H2 for development/testing)
-spring.datasource.url=jdbc:h2:mem:complaintdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=Amypo
 
-# JPA/Hibernate Configuration
+# ===============================
+# APPLICATION NAME
+# ===============================
+spring.application.name=demo
+
+# ===============================
+# DATASOURCE (H2 - in memory for tests)
+# ===============================
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
-# H2 Console (optional, for debugging)
+# ===============================
+# H2 CONSOLE
+# ===============================
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Logging
-logging.level.org.springframework.security=DEBUG
-logging.level.com.example.demo=DEBUG
-
-# Swagger/OpenAPI
+# ===============================
+# SWAGGER / OPENAPI
+# ===============================
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
 
+# ===============================
+# SECURITY (JWT)
+# ===============================
+jwt.secret=MyVerySecretKeyForJwtDemoProject
+jwt.expiration=3600000
+
+# ===============================
+# LOGGING
+# ===============================
+logging.level.org.springframework=INFO
+logging.level.com.example.demo=DEBUG
